guestbook/guestbook-ui-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    argocd.argoproj.io/instance: guestbook
  name: guestbook-ui
  namespace: argocd
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: guestbook-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: guestbook-ui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        imagePullPolicy: IfNotPresent
        name: guestbook-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/data
          name: volume-g64tz
        - mountPath: /opt/data/
          name: volume-pvb90
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volume-g64tz
        persistentVolumeClaim:
          claimName: test-volume
      - configMap:
          defaultMode: 420
          name: test-cm
        name: volume-pvb90
